fix metrics
